RESOLVED FIXED273537
[view-transitions] https://spotify-astro-transitions.vercel.app glitches due to incorrect layer position with overflow:hidden ancestor
https://bugs.webkit.org/show_bug.cgi?id=273537
Summary [view-transitions] https://spotify-astro-transitions.vercel.app glitches due ...
Matt Woodrow
Reported 2024-04-30 20:59:31 PDT
This jumps at the end, because the 'new' pseudo layer position had been incorrect.
Attachments
Radar WebKit Bug Importer
Comment 1 2024-04-30 20:59:40 PDT
Matt Woodrow
Comment 2 2024-04-30 21:02:53 PDT
EWS
Comment 3 2024-05-01 14:30:24 PDT
Committed 278230@main (84e133272f1e): <https://commits.webkit.org/278230@main> Reviewed commits have been landed. Closing PR #27969 and removing active labels.
Matt Woodrow
Comment 4 2024-05-01 14:56:39 PDT
Submitted web-platform-tests pull request: https://github.com/web-platform-tests/wpt/pull/46012
Note You need to log in before you can comment on or make changes to this bug.