[view-transitions] https://spotify-astro-transitions.vercel.app glitches due to incorrect layer position with overflow:hidden ancestor. https://bugs.webkit.org/show_bug.cgi?id=273537 <rdar://127340912>

Reviewed by Tim Nguyen.

Rather than just moving the existing parent graphics layer rect (which isn't relevant, since this layer will be reparented),
use the rect that the pseudo (to which this layer will be reparented) represents directly. It still needs to be moved into the coordinate
space of the current compositing ancestor, since that's what the following code expects.

* LayoutTests/imported/w3c/web-platform-tests/css/css-view-transitions/new-content-ancestor-clipped-expected.html: Added.
* LayoutTests/imported/w3c/web-platform-tests/css/css-view-transitions/new-content-ancestor-clipped-ref.html: Added.
* LayoutTests/imported/w3c/web-platform-tests/css/css-view-transitions/new-content-ancestor-clipped.html: Added.
* Source/WebCore/rendering/RenderLayerBacking.cpp:
(WebCore::RenderLayerBacking::updateGeometry):

Canonical link: https://commits.webkit.org/278230@main